sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:12: error: ';' expected but '{' found.
    while(i+ecart<len) {
                       ^